#1014634 by Dave Reid: Added support for new mystery man and retro default gravatars. by Dave Reid: Added support for the 'force default' parameter. by Dave Reid: Re-added size variable as a stop gap for #334630. by Dave Reid: Fixed D7 porting bugs, and code, documentation and UI cleanups.

--- a/gravatar.css
+++ b/gravatar.css
@@ -7,3 +7,7 @@
 html.js .js-show {
   display: block !important;
 }
+
+img#gravatar-imagepreview {
+  float: right;
+}
